// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppList should display appName when query has been loaded 1`] = `
<div>
  <div
    data-testid="NavigationList"
  >
    <div
      data-testid="NavigationListSection"
    >
      <div>
        <li
          class="MuiListItem-container"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiListItem-root medium MuiListItem-gutters makeStyles-gutters-1 makeStyles-gutters-3 MuiListItem-button MuiListItem-secondaryAction makeStyles-secondaryAction-2 makeStyles-secondaryAction-4"
            href="/#/permissions/slug/alan"
            tabindex="0"
          >
            <div
              class="MuiListItemIcon-root cozyListItemIcon"
            >
              <div
                data-testid="AppIcon"
              />
            </div>
            <div
              data-primary="Alan"
              data-secondary="1 permission"
              data-testid="ListItemText"
            />
            <span
              class="MuiTouchRipple-root"
            />
          </a>
          <div
            class="MuiListItemSecondaryAction-root"
          >
            <svg
              class="u-mr-1 styles__icon___23x3R"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8.6 8L4.7 4.1a.948.948 0 01-.275-.7c0-.284.092-.517.275-.7a.948.948 0 01.7-.275c.283 0 .517.091.7.275l4.6 4.6c.1.1.17.208.213.325.041.116.062.241.062.375 0 .133-.02.258-.063.375a.878.878 0 01-.212.325l-4.6 4.6a.948.948 0 01-.7.275.948.948 0 01-.7-.275.948.948 0 01-.275-.7c0-.284.092-.517.275-.7L8.6 8z"
              />
            </svg>
          </div>
        </li>
        <hr
          class="MuiDivider-root MuiDivider-inset"
        />
      </div>
      <div>
        <li
          class="MuiListItem-container"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiListItem-root medium MuiListItem-gutters makeStyles-gutters-1 makeStyles-gutters-5 MuiListItem-button MuiListItem-secondaryAction makeStyles-secondaryAction-2 makeStyles-secondaryAction-6"
            href="/#/permissions/slug/contacts"
            tabindex="0"
          >
            <div
              class="MuiListItemIcon-root cozyListItemIcon"
            >
              <div
                data-testid="AppIcon"
              />
            </div>
            <div
              data-primary="Contacts"
              data-secondary="3 permissions"
              data-testid="ListItemText"
            />
            <span
              class="MuiTouchRipple-root"
            />
          </a>
          <div
            class="MuiListItemSecondaryAction-root"
          >
            <svg
              class="u-mr-1 styles__icon___23x3R"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8.6 8L4.7 4.1a.948.948 0 01-.275-.7c0-.284.092-.517.275-.7a.948.948 0 01.7-.275c.283 0 .517.091.7.275l4.6 4.6c.1.1.17.208.213.325.041.116.062.241.062.375 0 .133-.02.258-.063.375a.878.878 0 01-.212.325l-4.6 4.6a.948.948 0 01-.7.275.948.948 0 01-.7-.275.948.948 0 01-.275-.7c0-.284.092-.517.275-.7L8.6 8z"
              />
            </svg>
          </div>
        </li>
        <hr
          class="MuiDivider-root MuiDivider-inset"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AppList should display sorted app and konnector names when query is not loading 1`] = `
<div>
  <div
    data-testid="NavigationList"
  >
    <div
      data-testid="NavigationListSection"
    >
      <div>
        <li
          class="MuiListItem-container"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiListItem-root medium MuiListItem-gutters makeStyles-gutters-7 makeStyles-gutters-9 MuiListItem-button MuiListItem-secondaryAction makeStyles-secondaryAction-8 makeStyles-secondaryAction-10"
            href="/#/permissions/slug/alan"
            tabindex="0"
          >
            <div
              class="MuiListItemIcon-root cozyListItemIcon"
            >
              <div
                data-testid="AppIcon"
              />
            </div>
            <div
              data-primary="Alan"
              data-secondary="1 permission"
              data-testid="ListItemText"
            />
            <span
              class="MuiTouchRipple-root"
            />
          </a>
          <div
            class="MuiListItemSecondaryAction-root"
          >
            <svg
              class="u-mr-1 styles__icon___23x3R"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8.6 8L4.7 4.1a.948.948 0 01-.275-.7c0-.284.092-.517.275-.7a.948.948 0 01.7-.275c.283 0 .517.091.7.275l4.6 4.6c.1.1.17.208.213.325.041.116.062.241.062.375 0 .133-.02.258-.063.375a.878.878 0 01-.212.325l-4.6 4.6a.948.948 0 01-.7.275.948.948 0 01-.7-.275.948.948 0 01-.275-.7c0-.284.092-.517.275-.7L8.6 8z"
              />
            </svg>
          </div>
        </li>
        <hr
          class="MuiDivider-root MuiDivider-inset"
        />
      </div>
      <div>
        <li
          class="MuiListItem-container"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiListItem-root medium MuiListItem-gutters makeStyles-gutters-7 makeStyles-gutters-11 MuiListItem-button MuiListItem-secondaryAction makeStyles-secondaryAction-8 makeStyles-secondaryAction-12"
            href="/#/permissions/slug/contacts"
            tabindex="0"
          >
            <div
              class="MuiListItemIcon-root cozyListItemIcon"
            >
              <div
                data-testid="AppIcon"
              />
            </div>
            <div
              data-primary="Contacts"
              data-secondary="3 permissions"
              data-testid="ListItemText"
            />
            <span
              class="MuiTouchRipple-root"
            />
          </a>
          <div
            class="MuiListItemSecondaryAction-root"
          >
            <svg
              class="u-mr-1 styles__icon___23x3R"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8.6 8L4.7 4.1a.948.948 0 01-.275-.7c0-.284.092-.517.275-.7a.948.948 0 01.7-.275c.283 0 .517.091.7.275l4.6 4.6c.1.1.17.208.213.325.041.116.062.241.062.375 0 .133-.02.258-.063.375a.878.878 0 01-.212.325l-4.6 4.6a.948.948 0 01-.7.275.948.948 0 01-.7-.275.948.948 0 01-.275-.7c0-.284.092-.517.275-.7L8.6 8z"
              />
            </svg>
          </div>
        </li>
        <hr
          class="MuiDivider-root MuiDivider-inset"
        />
      </div>
    </div>
  </div>
</div>
`;
